--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Jesse's Ramen</title>
+    <title>kundan's Ramen</title>
 
     <meta name="description" content="Management Consultant at EY. Technology, AI and design enthusiast." />
 
-    <meta itemprop=name content="Jesse Zhou - Business, Technology and Design">
+    <meta itemprop=name content="kundan Agrawal - Business, Technology and Design">
     <meta itemprop="description" content="Management Consultant at EY. Technology, AI and design enthusiast.">
     <meta itemprop="image" content=https://jesse-zhou.com/social/share-1200x630.png>
 
